# tech-jobs-data-platform

./: .gitignore  Makefile  README.md  pyproject.toml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: daily-dbt-build.yml  dbt-build.yml  deploy-elementary-report.yml  pr-check.yml  terraform-apply-prod.yml
dbt/: .sqlfluff  README.md  dbt_project.yml  package-lock.yml  packages.yml
dbt/edr_target/: elementary_output.json  elementary_report.html
dbt/models/mart/jobs/: bridge_framework.sql  bridge_tool.sql  dim_framework.sql  dim_job_details.sql  dim_language.sql  dim_tool.sql  fct_jobs.sql
dbt/models/mart/reports/: _models.yml  bi__job_analysis.sql  bi__job_analysis_detail.sql
dbt/models/staging/: _models.yml  _sources.yml  stg_joblist.sql
docs/: elementary_output.json  index.html
functions/func_hello/: Dockerfile  main.py
functions/func_loader/: main.py  requirements.txt
functions/func_loader/sql/: merge.sql
functions/func_scraper/: main.py  requirements.txt
functions/func_scraper/utils/: http_client.py  models.py  parsers.py  scraper.py
functions/shared/: bigquery.py  bigquery_utils.py  date_utils.py  gcs.py  gcs_utils.py  logger_config.py  pubsub_utils.py
terraform/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
terraform/modules/func_hello/: main.tf  variables.tf
terraform/modules/func_loader/: main.tf  variables.tf
terraform/modules/func_scraper/: main.tf  variables.tf
tests/: conftest.py
tests/functions/func_loader/: test_loader_main.py
tests/functions/func_scraper/: test_scraper_main.py
tests/functions/func_scraper/utils/: test_http_client.py  (+3 more)
tests/functions/shared/: test_bigquery.py  test_gcs.py
