[tool.poetry]
name = "tech-jobs-data-platform"
version = "0.1.0"
description = ""
authors = ["dmaruyama-51 <0501awasuram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
functions-framework = "^3.8.2"
google-cloud-storage = "^2.19.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
